methods.picture.PatternPicture.scala.code
def bslash(c:Color) {
  setBrushColor(c)
  left()
  forward()
  brushDown()
  brushUp()
  backward()
  right()
  forward()
  brushDown()
  brushUp()
  forward()
  forward()
  left()
}

def pattern() {
  bslash(Color.RED)
  bslash(Color.BLUE)
  bslash(Color.GREEN)
  bslash(Color.YELLOW)
  
}


  }
}
override def run() {
  pattern()
  for (i <- 1 to 4) {
    forward()
  }
  pattern()
  for (i <- 1 to 3) {
    forward()
  }
  left()
  for (m <- 1 to 4) {
    forward()
  }
  right()
  for (m <- 1 to 4) {
    backward()
  }  
  pattern()
  for (i <- 1 to 4) {
    forward()
  }
	pattern()
}
